tests/NormalTests/paczka1/fuzzy1/54962743.err
Error in line 2: enMA S822 89,6
Error in line 4: MBxAj S929 14,1
Error in line 16: enMA S822 565,2
Error in line 20: RUFuvCT A142 1,1
Error in line 23: ID1ikVgyqHa A142 11,0
Error in line 38: QAweG9thPHC S822 4,9
Error in line 37: ID1ikVgyqHa S929 54,1
